# erfiume_bot

./: .gitignore  AGENTS.md  README.md
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  python-ci.yml
.github/workflows/: bot-deploy.yml  cleanup.yml  codeql.yml  fetcher-deploy.yml  gitleaks.yml  infra-scan.yml  lambda-deploy.yml  pulumi-preview.yml  pulumi-up.yml  python-ci.yml  repo-branch-cleanup.yml  repo-infra-scan.yml  run-gitleaks.yml  rust-ci.yml
app/: Cargo.toml  Makefile  erfiume_bot.py  erfiume_fetcher.py  pyproject.toml  standalone.py
app/bot/: Cargo.toml  Makefile.toml
app/bot/src/: logging.rs  main.rs
app/bot/src/commands/: context.rs  handlers.rs  mod.rs  utils.rs
app/bot/src/commands/handlers/: alerts.rs  callbacks.rs  commands.rs  message.rs  mod.rs  parsing.rs  regions.rs
app/bot/src/station/: fuzzy.rs  mod.rs  search.rs
app/core/: Cargo.toml
app/core/src/: config.rs
app/dynamodb/: Cargo.toml
app/dynamodb/src/: alerts.rs  chats.rs  lib.rs  parse.rs  stations.rs  utils.rs
app/erfiume/: __init__.py  apis.py  logging.py  storage.py  tgbot.py
app/fetcher/: Cargo.toml  Makefile.toml
app/fetcher/src/: alerts.rs  dynamodb.rs  logging.rs  main.rs  station.rs
app/fetcher/src/region/: emilia_romagna.rs  marche.rs  mod.rs
app/r/: Cargo.toml
pulumi/: Makefile  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  Taskfile.yaml  __main__.py  docker-compose.yaml  lambda_utils.py  pyproject.toml  schema.py  stack_config.py  telegram_provider.py
pulumi/er_fiume/: __init__.py  function.py  helpers.py  iam.py  tables.py
