[workspace]
resolver = "3"
members = ["bot", "fetcher", "dynamodb"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Bot per leggere i livelli idrometrici dei fiumi in Emilia-Romagna e Marche (allertameteo.regione.emilia-romagna.it, app.protezionecivile.marche.it)."
authors = ["Edoardo Rosa <6991986+notdodo@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.101"
aws-config = "1.8.13"
aws-sdk-dynamodb = { version = "1.104.0", features = ["test-util"] }
chrono = "0.4.43"
chrono-tz = "0.10.4"
edit-distance = "2.2.2"
fastrand = "2.3.0"
futures = "0.3.31"
lambda_runtime = "1.0.2"
openssl = { version = "0.10.75", features = [
    "vendored",
] } # Needed only for cargo lambda build
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = "1.0.228"
serde_dynamo = "4.3.0"
serde_json = "1.0.148"
strsim = "0.11.1"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.48.0", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
