[workspace]
resolver = "3"
members = ["bot", "fetcher", "dynamodb", "core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Bot per leggere i livelli idrometrici dei fiumi in Emilia-Romagna e Marche (allertameteo.regione.emilia-romagna.it, app.protezionecivile.marche.it)."
authors = ["Edoardo Rosa <6991986+notdodo@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.102"
aws-config = "1.8.15"
aws-sdk-dynamodb = { version = "1.110.0", features = ["test-util"] }
chrono = "0.4.44"
chrono-tz = "0.10.4"
edit-distance = "2.2.2"
fastrand = "2.3.0"
futures = "0.3.32"
lambda_runtime = "1.1.2"
openssl = { version = "0.10.78", features = [
    "vendored",
] } # Needed only for cargo lambda build
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = "1.0.228"
serde_dynamo = "4.3.0"
serde_json = "1.0.149"
strsim = "0.11.1"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.50.0", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
