[workspace]
resolver = "3"
members = ["bot", "fetcher", "dynamodb", "core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Bot per leggere i livelli idrometrici dei fiumi in Emilia-Romagna e Marche (allertameteo.regione.emilia-romagna.it, app.protezionecivile.marche.it)."
authors = ["Edoardo Rosa <6991986+notdodo@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.102"
aws-config = "1.8.17"
aws-sdk-dynamodb = { version = "1.112.0", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
] }
chrono = "0.4.44"
chrono-tz = "0.10.4"
edit-distance = "2.2.2"
fastrand = "2.4.1"
futures = "0.3.32"
lambda_runtime = "1.2.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "form",
    "http2",
    "charset",
    "rustls",
] }
serde = "1.0.228"
serde_dynamo = "4.3.0"
serde_json = "1.0.150"
strsim = "0.11.1"
teloxide = { version = "0.17.0", default-features = false, features = [
    "macros",
    "rustls",
] }
tokio = { version = "1.52.3", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
