[tool.poetry]
name = "erfiume-pulumi"
version = "0.1.0"
description = ""
authors = ["Edoardo Rosa <6991986+notdodo@users.noreply.github.com>"]
keywords = ["erfiume", "telegram", "fiumi"]
readme = "README.md"
repository = "https://github.com/notdodo/erfiume"
homepage = "https://github.com/notdodo/erfiume"
documentation = "https://github.com/notdodo/erfiume/blob/main/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi-aws = "^6.68.0"
pulumi-command = "^1.0.3"
pulumi-cloudflare = "^5.49.1"
requests = "^2.32.3"
diagrams = "^0.24.1"

[tool.poetry.group.dev.dependencies]
awscli-local = "^0.22.0"
mypy = { extras = ["faster-cache"], version = "^1.15.0" }
ruff = "^0.11.8"
pydantic = "^2.11.4"
types-requests = "^2.32.0.20250328"

[tool.ruff]
output-format = "github"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = ["D2", "D4", "ANN", "COM812", "ISC001", "ERA001", "PLR0913"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
disable = ["fixme", "line-too-long"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
