[project]
name = "erfiume-pulumi"
version = "0.1.0"
description = ""
authors = [
    { name = "Edoardo Rosa", email = "6991986+notdodo@users.noreply.github.com" },
]
requires-python = ">3.12.0"
readme = "README.md"
keywords = ["erfiume", "telegram", "fiumi"]
dependencies = [
    "pulumi-aws>=7.3.0",
    "pulumi-cloudflare>=6.4.1",
    "requests>=2.32.4",
    "diagrams>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/notdodo/erfiume"
Repository = "https://github.com/notdodo/erfiume"
Documentation = "https://github.com/notdodo/erfiume/blob/main/README.md"

[dependency-groups]
dev = [
    "mypy[faster-cache]>=1.17.1",
    "ruff>=0.12.7",
    "pydantic>=2.11.7",
    "types-requests>=2.32.4.20250611",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
output-format = "github"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = ["D2", "D4", "ANN", "COM812", "ISC001", "ERA001", "PLR0913"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true
exclude = ["\\.venv", "\\.ruff_cache", "\\.mypy_cache"]

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
disable = ["fixme", "line-too-long"]
