[package]
name = "erfiume-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.8.1"
aws-sdk-dynamodb = "1.82.0"
chrono = "0.4.41"
chrono-tz = "0.10.4"
edit-distance = "2.1.3"
fastrand = "2.3.0"
lambda_runtime = "0.14.3"
openssl = { version = "0.10.73", features = ["vendored"] }
serde = "1.0.219"
serde_dynamo = "4.2.14"
serde_json = "1.0.142"
strsim = "0.11.1"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
