[package]
name = "erfiume-bot"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
erfiume-dynamodb = { path = "../dynamodb" }
chrono-tz.workspace = true
chrono.workspace = true
edit-distance.workspace = true
fastrand.workspace = true
lambda_runtime.workspace = true
openssl = { workspace = true, features = [
    "vendored",
] } # Needed only for cargo lambda build
serde_dynamo.workspace = true
serde_json.workspace = true
serde.workspace = true
strsim.workspace = true
teloxide = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
