[package]
name = "erfiume-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.8.1"
aws-sdk-dynamodb = "1.82.0"
futures = "0.3.31"
lambda_runtime = "0.14.3"
openssl = { version = "0.10.73", features = [
    "vendored",
] } # Needed only for cargo lambda build
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.45.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
