[package]
name = "erfiume-fetcher"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
erfiume-dynamodb = { path = "../dynamodb" }
futures.workspace = true
lambda_runtime.workspace = true
openssl = { workspace = true, features = [
    "vendored",
] } # Needed only for cargo lambda build
reqwest = { workspace = true, features = ["json", "form"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
