[package]
name = "erfiume-fetcher"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
erfiume-core = { path = "../core" }
erfiume-dynamodb = { path = "../dynamodb" }
futures.workspace = true
lambda_runtime.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
