[package]
name = "r"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aws-config = "1.5.8"
aws-sdk-dynamodb = "1.50.0"
futures = "0.3.31"
lambda_runtime = "0.13.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
